Python: accessing ParticleEdit.hair causes segmentation violation #21055

Closed
opened 2010-02-09 08:30:21 +01:00 by Thomas Larsson · 6 comments
Member

%%%
Python: accessing ParticleEdit.hair causes segmentation violation
build 26658
Ubuntu 64 bit

Run the following code.

-------------- Python file -----------

import bpy

ts = bpy.context.tool_settings
print(ts)
pe = ts.particle_edit
print(pe)
for ext in dir(pe):
var = "pe.%s" % ext
print(var)
print(eval(var))

-------- Output ----------

[BPy_StructRNA "ToolSettings"]
[BPy_StructRNA "ParticleEdit"]
pe.BoolProperty
<built-in method BoolProperty of type object at 0x368e120>
pe.BoolVectorProperty
<built-in method BoolVectorProperty of type object at 0x368e120>
pe.CollectionProperty
<built-in method CollectionProperty of type object at 0x368e120>
pe.EnumProperty
<built-in method EnumProperty of type object at 0x368e120>
pe.FloatProperty
<built-in method FloatProperty of type object at 0x368e120>
pe.FloatVectorProperty
<built-in method FloatVectorProperty of type object at 0x368e120>
pe.IntProperty
<built-in method IntProperty of type object at 0x368e120>
pe.IntVectorProperty
<built-in method IntVectorProperty of type object at 0x368e120>
pe.PointerProperty
<built-in method PointerProperty of type object at 0x368e120>
pe.StringProperty
<built-in method StringProperty of type object at 0x368e120>
pe.doc
Properties of particle editing mode.
pe.module
bpy.types
pe.slots
()
pe.add_interpolate
False
pe.add_keys
5
pe.auto_velocity
False
pe.bl_rna
[BPy_StructRNA "Struct" -> "ParticleEdit"]
pe.brush
None
pe.draw_particles
False
pe.draw_step
0
pe.editable
False
pe.emitter_deflect
True
pe.emitter_distance
0.25
pe.fade_frames
0
pe.fade_time
False
pe.hair
Segmentation fault

%%%

%%% Python: accessing ParticleEdit.hair causes segmentation violation build 26658 Ubuntu 64 bit Run the following code. # -------------- Python file ----------- import bpy ts = bpy.context.tool_settings print(ts) pe = ts.particle_edit print(pe) for ext in dir(pe): var = "pe.%s" % ext print(var) print(eval(var)) # -------- Output ---------- [BPy_StructRNA "ToolSettings"] [BPy_StructRNA "ParticleEdit"] pe.BoolProperty <built-in method BoolProperty of type object at 0x368e120> pe.BoolVectorProperty <built-in method BoolVectorProperty of type object at 0x368e120> pe.CollectionProperty <built-in method CollectionProperty of type object at 0x368e120> pe.EnumProperty <built-in method EnumProperty of type object at 0x368e120> pe.FloatProperty <built-in method FloatProperty of type object at 0x368e120> pe.FloatVectorProperty <built-in method FloatVectorProperty of type object at 0x368e120> pe.IntProperty <built-in method IntProperty of type object at 0x368e120> pe.IntVectorProperty <built-in method IntVectorProperty of type object at 0x368e120> pe.PointerProperty <built-in method PointerProperty of type object at 0x368e120> pe.StringProperty <built-in method StringProperty of type object at 0x368e120> pe.__doc__ Properties of particle editing mode. pe.__module__ bpy.types pe.__slots__ () pe.add_interpolate False pe.add_keys 5 pe.auto_velocity False pe.bl_rna [BPy_StructRNA "Struct" -> "ParticleEdit"] pe.brush None pe.draw_particles False pe.draw_step 0 pe.editable False pe.emitter_deflect True pe.emitter_distance 0.25 pe.fade_frames 0 pe.fade_time False pe.hair Segmentation fault %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Could someone else try this?
Im enable to redo this crash...

  • in object mode
  • in particle edit mode
  • after testing 5 or so times

no errors while using valgrind which normally will detect problems like this.%%%

%%%Could someone else try this? Im enable to redo this crash... - in object mode - in particle edit mode - after testing 5 or so times no errors while using valgrind which normally will detect problems like this.%%%

%%%unable to redo the crash*, tested on 64bit ubuntu karmic.%%%

%%%unable to redo the crash*, tested on 64bit ubuntu karmic.%%%

%%%was testing with a particle system where it didn't crash.
fixed in svn, thanks for the report.%%%

%%%was testing with a particle system where it didn't crash. fixed in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%was testing with a particle system where it didn't crash.
fixed in svn, thanks for the report.%%%

%%%was testing with a particle system where it didn't crash. fixed in svn, thanks for the report.%%%
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#21055
No description provided.