bugfix [#21055] Python: accessing ParticleEdit.hair causes segmentation violation